# fuGPT

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  analyze-repo-flow.mmd  analyze-repo.py  pyproject.toml  questions.txt  rag-candidate-evaluation.md  repo-embeddings.db  temp_query.txt  vectorize-repo.py
config/: system-prompt.txt
scripts/: dev.sh  format.sh  lint.sh  setup.sh  test.sh
tests/: __init__.py  test_imports.py
